@@ -1,4 +1,8 @@
-﻿drkns 28.12.2015 15:28:08 +0200 - build 4493
+﻿drkns 28.12.2015 16:32:20 +0200 - build 4494
+
+1. Уточнение 4493.
+
+drkns 28.12.2015 15:28:08 +0200 - build 4493
 
 1. Рефакторинг.
 
